--- a/navigation.tmpl.html
+++ b/navigation.tmpl.html
@@ -4,9 +4,9 @@
 </style>
 <nav>
 	<ul>
-		<li><a href="insert.php">INSERT</li>
-		<li><a href="select.php">SELECT</li>
-		<li><a href="update.php">UPDATE</li>
-		<li><a href="delete.php">DELETE</li>
+		<li><a href="insert.php"> INSERT</a> </li>
+		<li><a href="select.php"> SELECT</a> </li>
+		<li><a href="update.php"> UPDATE </a></li>
+		<li><a href="delete.php"> DELETE </a></li>
 	</ul>
 </nav>
